--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <html>
   <head>
     <link href="css/styles.css" rel="stylesheet" type="text/css">
+    <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
+    <script src="js/jQuery-3.3.1.js"></script>
+    <script src="js/scripts.js"></script>
     <title>This is a website about my cat!</title>
     <h1>This is a Website About My Cat</h1>
     <img src="img/blackcat.jpeg" alt="This is a picture of a black cat">
@@ -19,5 +22,10 @@
         <li>My Bed</li>
         <li>Under the <strong>Couch</strong></li>
       </ol>
+    <div class="container">
+      <button class="btn btn-info" id="original">Original Theme</button>
+      <button class="btn btn-warning" id="light">Light Theme</button>
+      <button class="btn btn-danger" id="dark">Dark Theme</button>
+    </div>
   </body>
 </html>
