add JS functions to a paragraph

--- a/index.html
+++ b/index.html
@@ -5,11 +5,12 @@
     <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
     <script src="js/jQuery-3.3.1.js"></script>
     <script src="js/scripts.js"></script>
+  </head>
+  <body>
     <title>This is a website about my cat!</title>
     <h1>This is a Website About My Cat</h1>
     <img src="img/blackcat.jpeg" alt="This is a picture of a black cat">
-  </head>
-  <body>
+    <div class="container">
     <h4>We adopted him from the <a href="https://www.oregonhumane.org">Oregon Humane Society</a><h4>
     <h1>Here are my cat's <em>favorite toys</em></h1>
       <ul>
@@ -22,10 +23,11 @@
         <li>My Bed</li>
         <li>Under the <strong>Couch</strong></li>
       </ol>
-    <div class="container">
+      <div class="container">
       <button class="btn btn-info" id="original">Original Theme</button>
       <button class="btn btn-warning" id="light">Light Theme</button>
       <button class="btn btn-danger" id="dark">Dark Theme</button>
+      <p>This cat once explained fusion to world leaders.</p>
     </div>
   </body>
 </html>
